--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -6,6 +6,7 @@
   width: 100%;
   padding: 60px 30px;
   transition: all 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  z-index: 2;
 }
 
 .show-menu {
@@ -43,6 +44,7 @@
   border-radius: 5px;
   padding: 12px 10px;
   background-color: var(--container-color);
+  z-index: 3;
 }
 
 .nav__toggle span {
@@ -81,6 +83,7 @@
     right: 30px;
     display: flex;
     align-items: center;
+    z-index: 1;
   }
 
   .nav__item {
@@ -95,6 +98,10 @@
     height: 50px;
     border-radius: 50%;
     position: relative;
+  }
+
+  .dark-theme .nav__link {
+    border-color: hsl(0, 0%, 20%);
   }
 
   .nav__icon {
