--- a/src/components/themes.css
+++ b/src/components/themes.css
@@ -36,7 +36,7 @@
 }
 
 .style__switcher-title {
-  font-size: var(--small-font-size);
+  font-size: var(--normal-font-size);
   font-weight: var(--weight-600);
   border-bottom: 1px solid hsl(0, 0, 87%);
   padding-bottom: 5px;
