--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   --container-color: hsl(0, 0%, 93%);
   --border-color: hsl(0, 0%, 87%);
   --text-white: #fff;
+  --boxShadow-color: hsla(0, 0%, 0%, 0.3);
 
   --body-font: "Open Sans", sans-serif;
   --second-font: "Poppins", sans-serif;
@@ -38,6 +39,7 @@
   --body-color: hsl(0, 0%, 7%);
   --container-color: hsl(0, 1%, 17%);
   --border-color: hsl(0, 0%, 15%);
+  --boxShadow-color: hsla(0, 0%, 100%, 0.3);
 }
 
 * {
