--- a/src/pages/portofolio/portofolio.css
+++ b/src/pages/portofolio/portofolio.css
@@ -7,6 +7,7 @@
   border-radius: 10px;
   overflow: hidden;
   cursor: pointer;
+  box-shadow: 0 0 8px var(--boxShadow-color);
 }
 
 .portofolio__img {
