--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -3,7 +3,7 @@
     grid-template-columns: 1fr;
     align-items: center;
     height: 100vh;
-    /* padding: 40px; */
+    padding: 40px;
   }
 
   .home__img {
@@ -19,7 +19,6 @@
   .home__data {
     max-width: auto;
     margin-inline: auto;
-    padding: 0px 40px 40px 70px;
   }
 
   .home__title {
