fix() : margin fix

--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -7,6 +7,11 @@
     align-items: flex-start;
   }
 
+  .about {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
   .info__list {
     row-gap: 20px;
     margin-bottom: 32px;
@@ -185,7 +190,8 @@
   }
 
   .about {
-    /* padding: 40px; */
+    margin-top: 25px;
+    margin-bottom: 25px;
   }
 
   .stats {
