--- a/src/pages/portofolio/portofolio.css
+++ b/src/pages/portofolio/portofolio.css
@@ -1,112 +1,237 @@
-.portofolio__container {
-  grid-template-columns: repeat(3, 1fr);
+@media screen and (max-width: 1024px) {
+  .portofolio {
+    margin-top: 50px;
+  }
+
+  .portofolio__container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .portofolio__item {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 0 8px var(--boxShadow-color);
+  }
+
+  .portofolio__img {
+    height: 250px;
+    width: 100%;
+    object-fit: cover;
+    vertical-align: middle;
+  }
+
+  .portofolio__hover {
+    background-color: var(--first-color);
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    display: grid;
+    place-items: center;
+    transition: all 0.5s ease;
+  }
+
+  .portofolio__item:hover .portofolio__hover {
+    opacity: 1;
+  }
+
+  .portofolio__title {
+    color: var(--text-white);
+    font-size: var(large-font-size);
+    font-weight: var(--weight-500);
+    transform: translateY(-20px);
+    transition: all 0.5s ease;
+  }
+
+  .portofolio__item:hover .portofolio__title {
+    transform: translateY(0);
+  }
+
+  .portofolio__modal {
+    position: fixed;
+    inset: 0;
+    background-color: hsla(0, 0%, 0%, 0.7);
+    z-index: 1000;
+    display: grid;
+    place-items: center;
+    padding: 15px;
+  }
+
+  .portofolio__modal-content {
+    background-color: var(--container-color);
+    max-width: 650px;
+    width: 100%;
+    padding: 32px;
+    border-radius: 10px;
+    position: relative;
+  }
+
+  .modal__close {
+    position: absolute;
+    top: -3.5%;
+    right: -8.5%;
+    width: 50px;
+    height: 50px;
+    filter: invert(0.8);
+  }
+
+  .modal__img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+  }
+
+  .modal__list {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 10px;
+    margin-bottom: 24px;
+  }
+
+  .modal__title {
+    text-align: center;
+    color: var(--first-color);
+    font-size: var(--h2-font-size);
+    letter-spacing: 2px;
+    margin-bottom: 24px;
+  }
+
+  .modal__item {
+    display: flex;
+    align-items: center;
+    column-gap: 8px;
+  }
+
+  .item__icon {
+    display: flex;
+  }
+
+  .item__title,
+  .item__details {
+    font-size: var(--small-font-size);
+    color: var(--title-color);
+  }
+
+  .item__details {
+    font-weight: var(--weight-600);
+  }
 }
 
-.portofolio__item {
-  position: relative;
-  border-radius: 10px;
-  overflow: hidden;
-  cursor: pointer;
-  box-shadow: 0 0 8px var(--boxShadow-color);
-}
+@media screen and (min-width: 1024px) {
+  .portofolio {
+    margin-top: 25px;
+  }
 
-.portofolio__img {
-  height: 250px;
-  width: 100%;
-  object-fit: cover;
-  vertical-align: middle;
-}
+  .portofolio__container {
+    grid-template-columns: repeat(3, 1fr);
+  }
 
-.portofolio__hover {
-  background-color: var(--first-color);
-  position: absolute;
-  inset: 0;
-  opacity: 0;
-  display: grid;
-  place-items: center;
-  transition: all 0.5s ease;
-}
+  .portofolio__item {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 0 8px var(--boxShadow-color);
+  }
 
-.portofolio__item:hover .portofolio__hover {
-  opacity: 1;
-}
+  .portofolio__img {
+    height: 250px;
+    width: 100%;
+    object-fit: cover;
+    vertical-align: middle;
+  }
 
-.portofolio__title {
-  color: var(--text-white);
-  font-size: var(large-font-size);
-  font-weight: var(--weight-500);
-  transform: translateY(-20px);
-  transition: all 0.5s ease;
-}
+  .portofolio__hover {
+    background-color: var(--first-color);
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    display: grid;
+    place-items: center;
+    transition: all 0.5s ease;
+  }
 
-.portofolio__item:hover .portofolio__title {
-  transform: translateY(0);
-}
+  .portofolio__item:hover .portofolio__hover {
+    opacity: 1;
+  }
 
-.portofolio__modal {
-  position: fixed;
-  inset: 0;
-  background-color: hsla(0, 0%, 0%, 0.7);
-  z-index: 1000;
-  display: grid;
-  place-items: center;
-  padding: 15px;
-}
+  .portofolio__title {
+    color: var(--text-white);
+    font-size: var(large-font-size);
+    font-weight: var(--weight-500);
+    transform: translateY(-20px);
+    transition: all 0.5s ease;
+  }
 
-.portofolio__modal-content {
-  background-color: var(--container-color);
-  max-width: 650px;
-  width: 100%;
-  padding: 32px;
-  border-radius: 10px;
-  position: relative;
-}
+  .portofolio__item:hover .portofolio__title {
+    transform: translateY(0);
+  }
 
-.modal__close {
-  position: absolute;
-  top: -3.5%;
-  right: -8.5%;
-  width: 50px;
-  height: 50px;
-  filter: invert(0.8);
-}
+  .portofolio__modal {
+    position: fixed;
+    inset: 0;
+    background-color: hsla(0, 0%, 0%, 0.7);
+    z-index: 1000;
+    display: grid;
+    place-items: center;
+    padding: 15px;
+  }
 
-.modal__img {
-  width: 100%;
-  height: 350px;
-  object-fit: cover;
-}
+  .portofolio__modal-content {
+    background-color: var(--container-color);
+    max-width: 650px;
+    width: 100%;
+    padding: 32px;
+    border-radius: 10px;
+    position: relative;
+  }
 
-.modal__list {
-  grid-template-columns: repeat(2, 1fr);
-  row-gap: 10px;
-  margin-bottom: 24px;
-}
+  .modal__close {
+    position: absolute;
+    top: -3.5%;
+    right: -8.5%;
+    width: 50px;
+    height: 50px;
+    filter: invert(0.8);
+  }
 
-.modal__title {
-  text-align: center;
-  color: var(--first-color);
-  font-size: var(--h2-font-size);
-  letter-spacing: 2px;
-  margin-bottom: 24px;
-}
+  .modal__img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+  }
 
-.modal__item {
-  display: flex;
-  align-items: center;
-  column-gap: 8px;
-}
+  .modal__list {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 10px;
+    margin-bottom: 24px;
+  }
 
-.item__icon {
-  display: flex;
-}
+  .modal__title {
+    text-align: center;
+    color: var(--first-color);
+    font-size: var(--h2-font-size);
+    letter-spacing: 2px;
+    margin-bottom: 24px;
+  }
 
-.item__title,
-.item__details {
-  font-size: var(--small-font-size);
-  color: var(--title-color);
-}
+  .modal__item {
+    display: flex;
+    align-items: center;
+    column-gap: 8px;
+  }
 
-.item__details {
-  font-weight: var(--weight-600);
+  .item__icon {
+    display: flex;
+  }
+
+  .item__title,
+  .item__details {
+    font-size: var(--small-font-size);
+    color: var(--title-color);
+  }
+
+  .item__details {
+    font-weight: var(--weight-600);
+  }
 }
