--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -1,100 +1,220 @@
-.contact {
-  margin-top: 50px;
+@media screen and (min-width: 1024px) {
+  .contact {
+    margin-top: 50px;
+  }
+
+  .contact__container {
+    grid-template-columns: 4fr 8fr;
+  }
+
+  .contact__title {
+    font-size: var(--h3-font-size);
+    font-weight: var(--weight-600);
+    margin-bottom: 1rem;
+  }
+
+  .contact__description {
+    font-size: var(--small-font-size);
+    line-height: 1.6;
+  }
+
+  .contact__description,
+  .contact__info .info__item {
+    margin-bottom: 20px;
+  }
+
+  .contact__info .info__item {
+    display: flex;
+    align-items: center;
+    column-gap: 16px;
+  }
+
+  .contact__info .info__icon {
+    color: var(--first-color);
+    font-size: var(--h2-font-size);
+  }
+
+  .contact__info .info__title {
+    font-size: var(--small-font-size);
+  }
+
+  .contact__info .info__desc {
+    font-family: var(--body-font);
+    font-size: var(--small-font-size);
+    font-weight: var(--weight-500);
+  }
+
+  .contact__social {
+    display: flex;
+    column-gap: 16px;
+  }
+
+  .contact__social-link {
+    background-color: var(--container-color);
+    color: var(--title-color);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 44px;
+    transition: all 0.3s ease;
+  }
+
+  .contact__social-link:hover {
+    background-color: var(--first-color);
+    color: var(--text-white);
+  }
+
+  .form__input-group {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 30px;
+  }
+
+  .form__input-div {
+    margin-bottom: 30px;
+  }
+
+  .form__control {
+    border: 1px solid var(--container-color);
+    background-color: var(--container-color);
+    color: var(--title-color);
+    width: 100%;
+    padding: 12px 24px;
+    border-radius: 30px;
+    font-size: var(--small-font-size);
+    transition: all 0.3s ease;
+  }
+
+  .form__control:focus {
+    border-color: var(--first-color);
+  }
+
+  .textarea {
+    resize: none;
+    height: 160px;
+  }
+
+  .contact__button-icon {
+    font-size: var(--h3-font-size);
+    line-height: 64px;
+  }
 }
 
-.contact__container {
-  grid-template-columns: 4fr 8fr;
-}
+@media screen and (max-width: 1024px) {
+  .section__title {
+    font-size: var(--big-font-size);
+    font-weight: var(--weight-800);
+    text-align: center;
+    margin-bottom: 20px;
+  }
 
-.contact__title {
-  font-size: var(--h3-font-size);
-  font-weight: var(--weight-600);
-  margin-bottom: 1rem;
-}
+  .contact {
+    margin-top: 50px;
+  }
 
-.contact__description {
-  font-size: var(--small-font-size);
-  line-height: 1.6;
-}
+  .contact__container {
+    grid-template-columns: 1fr;
+  }
 
-.contact__description,
-.contact__info .info__item {
-  margin-bottom: 20px;
-}
+  .contact__title {
+    font-size: var(--h3-font-size);
+    font-weight: var(--weight-600);
+    margin-bottom: 10px;
+    text-align: center;
+  }
 
-.contact__info .info__item {
-  display: flex;
-  align-items: center;
-  column-gap: 16px;
-}
+  .contact__description {
+    font-size: var(--small-font-size);
+    line-height: 1.6;
+    text-align: center;
+  }
 
-.contact__info .info__icon {
-  color: var(--first-color);
-  font-size: var(--h2-font-size);
-}
+  .contact__info {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
+    margin-top: 20px;
+  }
 
-.contact__info .info__title {
-  font-size: var(--small-font-size);
-}
+  .contact__info .info__item {
+    display: flex;
+    align-items: center;
+    column-gap: 16px;
+  }
 
-.contact__info .info__desc {
-  font-family: var(--body-font);
-  font-size: var(--small-font-size);
-  font-weight: var(--weight-500);
-}
+  .contact__info .info__icon {
+    color: var(--first-color);
+    font-size: var(--h2-font-size);
+  }
 
-.contact__social {
-  display: flex;
-  column-gap: 16px;
-}
+  .contact__info .info__title {
+    font-size: var(--small-font-size);
+  }
 
-.contact__social-link {
-  background-color: var(--container-color);
-  color: var(--title-color);
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 44px;
-  transition: all 0.3s ease;
-}
+  .contact__info .info__desc {
+    font-family: var(--body-font);
+    font-size: var(--small-font-size);
+    font-weight: var(--weight-500);
+  }
 
-.contact__social-link:hover {
-  background-color: var(--first-color);
-  color: var(--text-white);
-}
+  .contact__social {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
+    margin-top: 20px;
+  }
 
-.form__input-group {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 30px;
-}
+  .contact__social-link {
+    background-color: var(--container-color);
+    color: var(--title-color);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 44px;
+    transition: all 0.3s ease;
+  }
 
-.form__input-div {
-  margin-bottom: 30px;
-}
+  .contact__social-link:hover {
+    background-color: var(--first-color);
+    color: var(--text-white);
+  }
 
-.form__control {
-  border: 1px solid var(--container-color);
-  background-color: var(--container-color);
-  color: var(--title-color);
-  width: 100%;
-  padding: 12px 24px;
-  border-radius: 30px;
-  font-size: var(--small-font-size);
-  transition: all 0.3s ease;
-}
+  .form__input-group {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 30px;
+  }
 
-.form__control:focus {
-  border-color: var(--first-color);
-}
+  .form__input-div {
+    margin-bottom: 30px;
+  }
 
-.textarea {
-  resize: none;
-  height: 160px;
-}
+  .form__control {
+    border: 1px solid var(--container-color);
+    background-color: var(--container-color);
+    color: var(--title-color);
+    width: 100%;
+    padding: 12px 24px;
+    border-radius: 30px;
+    font-size: var(--small-font-size);
+    transition: all 0.3s ease;
+  }
 
-.contact__button-icon {
-  font-size: var(--h3-font-size);
-  line-height: 64px;
+  .form__control:focus {
+    border-color: var(--first-color);
+  }
+
+  .textarea {
+    resize: none;
+    height: 160px;
+  }
+
+  .contact__button-icon {
+    font-size: var(--h3-font-size);
+    line-height: 64px;
+  }
 }
