--- a/src/pages/portofolio/portofolio.css
+++ b/src/pages/portofolio/portofolio.css
@@ -18,7 +18,7 @@
   .portofolio__img {
     height: 250px;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
     vertical-align: middle;
   }
 
@@ -60,17 +60,19 @@
 
   .portofolio__modal-content {
     background-color: var(--container-color);
-    max-width: 650px;
-    width: 100%;
+    /* max-width: 60vh; */
+    width: 60%;
+    height: 80%;
+    max-height: 600px;
     padding: 32px;
     border-radius: 10px;
     position: relative;
   }
 
   .modal__close {
-    position: absolute;
-    top: -3.5%;
-    right: -8.5%;
+    position: relative;
+    top: -13.5%;
+    right: -120%;
     width: 50px;
     height: 50px;
     filter: invert(0.8);
@@ -137,7 +139,7 @@
   .portofolio__img {
     height: 250px;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
     vertical-align: middle;
   }
 
@@ -198,7 +200,7 @@
   .modal__img {
     width: 100%;
     height: 350px;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   .modal__list {
